fix spacing

--- a/general.css
+++ b/general.css
@@ -34,9 +34,16 @@ a {
     }
 }
 
-@media (min-width: 535px) and (max-width: 1200px) {
+@media (min-width: 535px) and (max-width: 1099px) {
     .right {
         margin-left: 18px;
+        margin-top: 72px;
+    }
+}
+
+@media (min-width: 1100px) and (max-width: 1200px) {
+    .right {
+        margin-left: clamp(18px, calc(18px + (100vw - 1100px) * 0.5), 68px);
         margin-top: 72px;
     }
 }
